Restores unit tests.